--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-spring.datasource.url=jdbc:postgresql://localhost/inst
-spring.datasource.username=postgres
-spring.datasource.password=qwerty123
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost/inst}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:postgres}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:qwerty123}
 spring.jpa.generate-ddl=true
 
 spring.freemarker.expose-request-attributes=true
